--- a/SettingsForm.it-IT.resx
+++ b/SettingsForm.it-IT.resx
@@ -171,10 +171,10 @@
     <value>NoControl</value>
   </data>
   <data name="label4.Size" type="System.Drawing.Size, System.Drawing">
-    <value>90, 13</value>
+    <value>77, 13</value>
   </data>
   <data name="label4.Text" xml:space="preserve">
-    <value>Pop up delle note</value>
+    <value>Visualizza tutte</value>
   </data>
   <data name="WinPopChk.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
