--- a/SettingsForm.resx
+++ b/SettingsForm.resx
@@ -121,10 +121,10 @@
   <data name="label3.Size" type="System.Drawing.Size, System.Drawing">
     <value>43, 13</value>
   </data>
-  <data name="&gt;&gt;label6.Name" xml:space="preserve">
-    <value>label6</value>
-  </data>
   <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="WinChk.AutoSize" type="System.Boolean, mscorlib">
+    <value>True</value>
+  </data>
   <data name="CtrlPopChk.TabIndex" type="System.Int32, mscorlib">
     <value>5</value>
   </data>
@@ -188,8 +188,8 @@
   <data name="&gt;&gt;SaveBtn.Name" xml:space="preserve">
     <value>SaveBtn</value>
   </data>
-  <data name="label2.Size" type="System.Drawing.Size, System.Drawing">
-    <value>91, 13</value>
+  <data name="label4.TabIndex" type="System.Int32, mscorlib">
+    <value>20</value>
   </data>
   <data name="&gt;&gt;WinPopChk.Name" xml:space="preserve">
     <value>WinPopChk</value>
@@ -232,6 +232,9 @@
   </data>
   <data name="label3.TabIndex" type="System.Int32, mscorlib">
     <value>10</value>
+  </data>
+  <data name="&gt;&gt;WidthTxt.Parent" xml:space="preserve">
+    <value>$this</value>
   </data>
   <data name="label7.TabIndex" type="System.Int32, mscorlib">
     <value>24</value>
@@ -734,8 +737,8 @@
   <data name="OpacityBar.Location" type="System.Drawing.Point, System.Drawing">
     <value>121, 114</value>
   </data>
-  <data name="label5.Text" xml:space="preserve">
-    <value>New note window size</value>
+  <data name="ShiftPopChk.Size" type="System.Drawing.Size, System.Drawing">
+    <value>47, 17</value>
   </data>
   <data name="label2.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -788,20 +791,23 @@
   <data name="&gt;&gt;KeyPopTxt.ZOrder" xml:space="preserve">
     <value>6</value>
   </data>
+  <data name="&gt;&gt;label6.Name" xml:space="preserve">
+    <value>label6</value>
+  </data>
   <data name="ColorValueTxt.Size" type="System.Drawing.Size, System.Drawing">
     <value>85, 20</value>
   </data>
   <data name="&gt;&gt;HeightTxt.ZOrder" xml:space="preserve">
     <value>0</value>
   </data>
-  <data name="&gt;&gt;KeyTxt.Type" xml:space="preserve">
-    <value>System.Windows.Forms.TextBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
   <data name="&gt;&gt;ColorValueTxt.Parent" xml:space="preserve">
     <value>$this</value>
   </data>
   <data name="KeyPopTxt.Size" type="System.Drawing.Size, System.Drawing">
     <value>50, 20</value>
+  </data>
+  <data name="WinChk.Text" xml:space="preserve">
+    <value>Win</value>
   </data>
   <data name="&gt;&gt;label5.Name" xml:space="preserve">
     <value>label5</value>
@@ -827,8 +833,8 @@
   <data name="label1.Location" type="System.Drawing.Point, System.Drawing">
     <value>12, 13</value>
   </data>
-  <data name="&gt;&gt;WidthTxt.Name" xml:space="preserve">
-    <value>WidthTxt</value>
+  <data name="WinPopChk.AutoSize" type="System.Boolean, mscorlib">
+    <value>True</value>
   </data>
   <data name="&gt;&gt;$this.Name" xml:space="preserve">
     <value>SettingsForm</value>
@@ -839,14 +845,14 @@
   <data name="&gt;&gt;label4.Type" xml:space="preserve">
     <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="WinChk.Text" xml:space="preserve">
-    <value>Win</value>
+  <data name="&gt;&gt;KeyTxt.Type" xml:space="preserve">
+    <value>System.Windows.Forms.TextBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="ColorBox.Size" type="System.Drawing.Size, System.Drawing">
     <value>156, 20</value>
   </data>
-  <data name="AltChk.Size" type="System.Drawing.Size, System.Drawing">
-    <value>38, 17</value>
+  <data name="label5.Text" xml:space="preserve">
+    <value>New note window size</value>
   </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="SaveBtn.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
@@ -876,8 +882,8 @@
   <data name="AltPopChk.Text" xml:space="preserve">
     <value>Alt</value>
   </data>
-  <data name="$this.StartPosition" type="System.Windows.Forms.FormStartPosition, System.Windows.Forms">
-    <value>CenterScreen</value>
+  <data name="label2.Size" type="System.Drawing.Size, System.Drawing">
+    <value>91, 13</value>
   </data>
   <data name="&gt;&gt;AltPopChk.Parent" xml:space="preserve">
     <value>$this</value>
@@ -891,13 +897,13 @@
   <data name="WinPopChk.Text" xml:space="preserve">
     <value>Win</value>
   </data>
+  <data name="$this.StartPosition" type="System.Windows.Forms.FormStartPosition, System.Windows.Forms">
+    <value>CenterScreen</value>
+  </data>
   <data name="label5.Location" type="System.Drawing.Point, System.Drawing">
     <value>12, 66</value>
   </data>
   <data name="&gt;&gt;label2.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="&gt;&gt;label4.Parent" xml:space="preserve">
     <value>$this</value>
   </data>
   <data name="&gt;&gt;ShiftPopChk.Name" xml:space="preserve">
@@ -951,9 +957,6 @@
   <data name="&gt;&gt;HeightTxt.Parent" xml:space="preserve">
     <value>$this</value>
   </data>
-  <data name="ShiftPopChk.Size" type="System.Drawing.Size, System.Drawing">
-    <value>47, 17</value>
-  </data>
   <data name="label7.Text" xml:space="preserve">
     <value>H:</value>
   </data>
@@ -966,8 +969,8 @@
   <data name="label1.TabIndex" type="System.Int32, mscorlib">
     <value>6</value>
   </data>
-  <data name="&gt;&gt;WidthTxt.Parent" xml:space="preserve">
-    <value>$this</value>
+  <data name="AltChk.Size" type="System.Drawing.Size, System.Drawing">
+    <value>38, 17</value>
   </data>
   <data name="label3.Location" type="System.Drawing.Point, System.Drawing">
     <value>12, 118</value>
@@ -980,6 +983,9 @@
   </data>
   <data name="label6.TabIndex" type="System.Int32, mscorlib">
     <value>22</value>
+  </data>
+  <data name="&gt;&gt;CtrlPopChk.Name" xml:space="preserve">
+    <value>CtrlPopChk</value>
   </data>
   <data name="&gt;&gt;CtrlChk.Type" xml:space="preserve">
     <value>System.Windows.Forms.CheckBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
@@ -1007,9 +1013,6 @@
   </data>
   <data name="OpacityTxt.TabIndex" type="System.Int32, mscorlib">
     <value>101</value>
-  </data>
-  <data name="label1.AutoSize" type="System.Boolean, mscorlib">
-    <value>True</value>
   </data>
   <data name="&gt;&gt;label6.Type" xml:space="preserve">
     <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
@@ -1086,8 +1089,8 @@
   <data name="label1.Text" xml:space="preserve">
     <value>New Note</value>
   </data>
-  <data name="label4.TabIndex" type="System.Int32, mscorlib">
-    <value>20</value>
+  <data name="&gt;&gt;CtrlChk.Parent" xml:space="preserve">
+    <value>$this</value>
   </data>
   <data name="WinPopChk.Size" type="System.Drawing.Size, System.Drawing">
     <value>45, 17</value>
@@ -1170,11 +1173,8 @@
   <data name="AltChk.Text" xml:space="preserve">
     <value>Alt</value>
   </data>
-  <data name="WinChk.AutoSize" type="System.Boolean, mscorlib">
+  <data name="label1.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
-  </data>
-  <data name="&gt;&gt;CtrlPopChk.Name" xml:space="preserve">
-    <value>CtrlPopChk</value>
   </data>
   <data name="&gt;&gt;ShiftChk.Parent" xml:space="preserve">
     <value>$this</value>
@@ -1191,14 +1191,14 @@
   <data name="CtrlChk.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
   </data>
-  <data name="&gt;&gt;CtrlChk.Parent" xml:space="preserve">
-    <value>$this</value>
+  <data name="&gt;&gt;WidthTxt.Name" xml:space="preserve">
+    <value>WidthTxt</value>
   </data>
   <data name="label4.Size" type="System.Drawing.Size, System.Drawing">
-    <value>83, 13</value>
+    <value>47, 13</value>
   </data>
-  <data name="WinPopChk.AutoSize" type="System.Boolean, mscorlib">
-    <value>True</value>
+  <data name="&gt;&gt;label4.Parent" xml:space="preserve">
+    <value>$this</value>
   </data>
   <data name="label6.Location" type="System.Drawing.Point, System.Drawing">
     <value>215, 66</value>
@@ -1207,7 +1207,7 @@
     <value>True</value>
   </data>
   <data name="label4.Text" xml:space="preserve">
-    <value>Pop all notes up</value>
+    <value>Show all</value>
   </data>
   <data name="CtrlPopChk.Size" type="System.Drawing.Size, System.Drawing">
     <value>41, 17</value>
@@ -1215,6 +1215,9 @@
   <data name="AltPopChk.TabIndex" type="System.Int32, mscorlib">
     <value>6</value>
   </data>
+  <metadata name="$this.Language" type="System.Globalization.CultureInfo, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>it-IT</value>
+  </metadata>
   <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
