Fixed deletion on closing

--- a/Properties/Messages.it-IT.resx
+++ b/Properties/Messages.it-IT.resx
@@ -121,7 +121,7 @@
     <value>Programma già in esecuzione</value>
   </data>
   <data name="AppDescription" xml:space="preserve">
-    <value>Annotazioni sul desktop salvate in realtime</value>
+    <value>Annota velocemente sul desktop</value>
   </data>
   <data name="CreatingNoteError" xml:space="preserve">
     <value>Errore nella creazione della nota</value>
