--- a/SettingsForm.it-IT.resx
+++ b/SettingsForm.it-IT.resx
@@ -164,6 +164,9 @@
   <data name="SaveBtn.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
   </data>
+  <data name="SaveBtn.Location" type="System.Drawing.Point, System.Drawing">
+    <value>274, 177</value>
+  </data>
   <data name="SaveBtn.Text" xml:space="preserve">
     <value>&amp;Salva</value>
   </data>
@@ -205,6 +208,9 @@
   </data>
   <data name="ColorBox.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
+  </data>
+  <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
+    <value>397, 213</value>
   </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -679,5 +685,11 @@
   </data>
   <data name="$this.Text" xml:space="preserve">
     <value>Impostazioni DeskNote</value>
+  </data>
+  <data name="label11.Text" xml:space="preserve">
+    <value>Lato fisso</value>
+  </data>
+  <data name="label8.Text" xml:space="preserve">
+    <value>Disponi e ridimensiona </value>
   </data>
 </root>
