--- a/Properties/Messages.resx
+++ b/Properties/Messages.resx
@@ -124,7 +124,7 @@
     <value>Take quick notes on your desktop</value>
   </data>
   <data name="Copyright" xml:space="preserve">
-    <value>Copyright (c) 2021 - Filippo Dibenedetto</value>
+    <value>Copyright (c) 2021 2022 - DIB21 - Filippo Dibenedetto</value>
   </data>
   <data name="CreatingNoteError" xml:space="preserve">
     <value>Error while creating the note</value>
